# claude.kak

./: Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-16-kak-claude-implementation.md  2026-03-16-protocol-parity-implementation.md
docs/superpowers/specs/: 2026-03-16-debounce-signals-design.md  2026-03-16-get-diagnostics-design.md  2026-03-16-kak-claude-design.md  2026-03-16-protocol-parity-design.md  2026-03-17-commands-design.md
rc/: claude.kak
src/: client.rs  error.rs  kak_logger.rs  lockfile.rs  main.rs  server.rs  websocket.rs
src/kakoune/: mod.rs  session.rs  socket.rs  state.rs
src/mcp/: protocol.rs  tools.rs
